customize for GRHS - templates and some default data

--- a/utils/templates/utils/tags/navigation/top_menu.html
+++ b/utils/templates/utils/tags/navigation/top_menu.html
@@ -5,21 +5,15 @@
 <div class="hide-for-print" data-sticky-container>
 <div data-sticky data-options="marginTop:0;" style="width:100%;z-index:10000;">
 
-	<div id="social_bar">
-  		<div class="grid-container" style="max-width: 100%;">
-    		{% include "contact/includes/social.html" %}
-  		</div>
-	</div>
-
 	<div class="title-bar" data-responsive-toggle="menu" data-hide-for="large">
   		<button class="menu-icon" type="button" style="background: transparent;"data-toggle></button>
-  		<div class="title-bar-title"><a href="{% pageurl site_root %}">ChrisDev Wagtail</a></div>
+  		<div class="title-bar-title"><a href="{% pageurl site_root %}">Grand Rapids Historical Society</a></div>
 	</div>
 
     <div class="top-bar" id="menu">
       	<div class="top-bar-left hide-for-small-only">
         	<ul class="dropdown menu">
-          		<li class="menu-text"><a href="{% pageurl site_root %}" style="padding: 0;">ChrisDev Wagtail</a></li>
+          		<li class="menu-text"><a href="{% pageurl site_root %}" style="padding: 0;">Grand Rapids Historical Society</a></li>
         	</ul>
       	</div>
       	<div class="top-bar-right">
