--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -371,7 +371,7 @@ hr {border-color: $light-gray;}
 
 
 footer {
-  background-color: #333;
+  background-color: red;
   color: $white;
   padding: 20px 0 0;
 
@@ -381,18 +381,6 @@ footer {
   .menu li a {padding: 11px 8px 11px 0; font-size: 14px;}
   .menu li a:hover {color: $white;}
   .accordion-menu .is-accordion-submenu-parent:not(.has-submenu-toggle) > a::after {border-color: $white transparent transparent;}
-
-  #copyright
-  {
-    background-color:$dark-metal;
-    margin-top: 20px;
-    p {
-      margin-bottom: 0;
-      padding: 8px 0;
-      font-size: 13.5px;
-      color: $white;
-    }
-  }
 }
 
 
