--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -16,6 +16,7 @@
 			<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" />
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.10.0/css/lightbox.min.css" />
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/2.0.3/motion-ui.min.css" />
+      <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
 		{% endblock %}
 	
 		{% compress css %}
