--- a/pages/static/css/_settings.scss
+++ b/pages/static/css/_settings.scss
@@ -62,6 +62,21 @@
 
 @import 'node_modules/foundation-sites/scss/util/util';
 
+
+// GR History color palette:
+
+$blue-dark: #1d2a57;
+$blue-light: #1e4497;
+$yellow-dark: #e49f24;
+$yellow-light: #ffcb4e;
+$red-dark: #ee4023;
+$red-light: #f2704a;
+$green-dark: #339863;
+$green-light: #6ac07a;
+$gray-dark: #373d4a;
+$gray-light: #727d83;
+
+
 // 1. Global
 // ---------
 
@@ -69,15 +84,15 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #3E50B4,
-  secondary: #FF3F80,
+  primary: $blue-dark,
+  secondary: $yellow-dark,
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
 );
 $light-gray: #e6e6e6;
-$medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
+$medium-gray: $gray-light;
+$dark-gray: $gray-dark;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
@@ -397,7 +412,7 @@ $dropdownmenu-padding: $global-menu-padding;
 $dropdownmenu-nested-margin: 0;
 $dropdownmenu-submenu-padding: $dropdownmenu-padding;
 $dropdownmenu-border: 1px solid $medium-gray;
-$dropdown-menu-item-color-active: get-color(primary);
+$dropdown-menu-item-color-active: $yellow-light;
 $dropdown-menu-item-background-active: transparent;
 
 // 19. Flexbox Utilities
