--- a/utils/templates/utils/tags/navigation/top_menu.html
+++ b/utils/templates/utils/tags/navigation/top_menu.html
@@ -1,4 +1,4 @@
-{% load wagtailcore_tags navigation_tags wagtailsettings_tags static %}
+{% load wagtailcore_tags navigation_tags wagtailsettings_tags wagtailimages_tags static %}
 {% get_settings %}
 {% get_site_root as site_root %}
 
@@ -13,7 +13,10 @@
     <div class="top-bar" id="menu">
         <div class="top-bar-left hide-for-small-only">
             <ul class="dropdown menu">
-                <li class="menu-text"><a href="{% pageurl site_root %}" style="padding: 0;">Grand Rapids Historical Society</a></li>
+                <li class="menu-text"><a href="{% pageurl site_root %}" style="padding: 0;">
+                  {% image settings.pages.SiteBranding.logo width-80 %}
+                  Grand Rapids<br>Historical Society</a>
+                </li>
             </ul>
         </div>
         <div class="top-bar-right">
