Header styling for many pages (or avoid header)

--- a/membership/templates/membership/membership_base.html
+++ b/membership/templates/membership/membership_base.html
@@ -3,11 +3,18 @@
 
 {% block breadcrumbs %}{% endblock %}
 
+{% block header %}
+  {% if self.feed_image %}
+  {% else %}
+      {{ self.title }}
+  {% endif %}
+{% endblock %}
+
+
 {% block content %}
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
 			<div class="medium-9 cell">
-				<center><h3>{{ self.title }}</h3></center>
 				<div class="grid-x grid-padding-x">
 		        	<div class="medium-7 cell">
 		        		{% block contact_content %}{% endblock %}
