--- a/contact/templates/contact/contact_base.html
+++ b/contact/templates/contact/contact_base.html
@@ -3,11 +3,15 @@
 
 {% block breadcrumbs %}{% endblock %}
 
+{% block header %}
+  {{ self.title }}
+{% endblock %}
+
+
 {% block content %}
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
 			<div class="medium-9 cell">
-				<center><h3>{{ self.title }}</h3></center>
 				<div class="grid-x grid-padding-x">
 		        	<div class="medium-7 cell">
 		        		{% block contact_content %}{% endblock %}
