--- a/events/templates/events/event_base.html
+++ b/events/templates/events/event_base.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags %}
 
+{% block header_area %}{% endblock %}
+
 {% block content %}
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
