--- a/gallery/templates/gallery/gallery_index.html
+++ b/gallery/templates/gallery/gallery_index.html
@@ -1,12 +1,16 @@
 {% extends "base.html" %}
 {% load static wagtailcore_tags wagtailimages_tags gallery_tags %}
 
+{% block header %}
+  {{ self.title }}
+{% endblock %}
+
+
 {% block content %}
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
 			<div class="medium-12 cell">
 		    	<center>
-		    		<h3>{{ self.title }}</h3>
 		      		{{ self.intro|richtext }}
 		    	</center>
 		    </div>
