--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -214,13 +214,33 @@ hr {border-color: $light-gray;}
 
 .list-style {li{list-style: none;}}
 
+header {
+  margin-top: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  @include breakpoint(medium) {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    margin-bottom: 10px;
+    background-color: $gray-light;  // FIXME an image
+  }
+  @include breakpoint(large) {
+    padding-top: 45px;
+    padding-bottom: 45px;
+    margin-bottom: 20px;
+  }
+  h1 {
+    color: nth($colors-dark, random(length($colors-dark)));
+  }
+}
+header + #content {
+  padding-top: 0;
+}
 #content {
   padding-top: 25px;
   padding-bottom: 25px;
   min-height: 100vh;
-  h1 {
-    color: nth($colors-dark, random(length($colors-dark)));
-  }
 }
 
 .card {
