--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -47,6 +47,12 @@
 
     	<div class="off-canvas-content" data-off-canvas-content>
 
+        {% block header_area %}
+        <header>
+          <h1 class="grid-container">{% block header %}{% endblock %}</h1>
+        </header>
+        {% endblock %}
+
       	{% block content %}{% endblock %}
 
       	<a href="#" class="scrollup"><img src="{% static 'img/top.png' %}"></i></a>
