--- a/pages/templates/pages/home_page.html
+++ b/pages/templates/pages/home_page.html
@@ -3,6 +3,8 @@
 
 {% block body_class %}template-{{ self.get_verbose_name|slugify }}{% endblock %}
 
+{% block header_area %}{% endblock %}
+
 {% block content %}
 	
 	<div id="intro">
