--- a/pages/templates/pages/standard_index_page_grid.html
+++ b/pages/templates/pages/standard_index_page_grid.html
@@ -3,6 +3,14 @@
 
 {% block breadcrumbs %}{% endblock %}
 
+{% block header %}
+  {% if self.feed_image %}
+  {% else %}
+      {{ self.title }}
+  {% endif %}
+{% endblock %}
+
+
 {% block content %}
 
 	{% include "pages/includes/feed_image_title.html" %}
@@ -10,14 +18,7 @@
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
 			<div id="standard_page" class="medium-10 cell">
-	      		{% if self.feed_image %}
-	      		{% else %}
-		          	<center>
-		              	<h3>{{ self.title }}</h3>
-		          	</center>
-		          	<br>
-	      		{% endif %}
-	
+
 	      		{% include "pages/includes/intro.html" with intro=self.intro only %}
 	      
 	      		<br>
