add title to application page, change registration name

--- a/membership/templates/membership/membership_base.html
+++ b/membership/templates/membership/membership_base.html
@@ -6,7 +6,7 @@
 {% block header %}
   {% if self.feed_image %}
   {% else %}
-      {{ self.title }}
+      {{ page.title }}
   {% endif %}
 {% endblock %}
 
