--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load wagtailcore_tags %}
-
+{% block header %} {{ page.title }}{% endblock %}
 {% block content %}
 	<div id="content" class="grid-container">
 		<div class="grid-x grid-padding-x align-center">
