--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -6,23 +6,26 @@
 {% endblock %}
 
 {% block breadcrumbs %}{% endblock %}
-
+{% block header_area %}
+{% endblock header_area %}
 {% block content %}
 
 	<div class="neat-article-container">
-		{% include "blog/includes/blog_header.html" %}
-		  
+
+
 		{% if self.feed_image %}
 			{% image self.feed_image fill-1200x400 as feed_image %}
 		  	<div class="neat-article-image">
 		    	<img class="article-image" src="{{ feed_image.url }}">
 		  	</div>
 		{% endif %}
-		
-		<div class="grid-container">  
+		{% include "blog/includes/blog_header.html" %}
+		<div class="grid-container">
 			<div class="grid-x grid-padding-x align-center neat-article-content">
+
 				<div class="medium-9 cell">
 					<div class="article-content">
+
 				    	{% include "blog/includes/blog_body.html" with body=self.body only %}
 				    </div>
 				</div>
