Improve readability and sizes of header

--- a/utils/templates/utils/tags/navigation/top_menu.html
+++ b/utils/templates/utils/tags/navigation/top_menu.html
@@ -36,7 +36,7 @@
                     </li>
                 {% endfor %}
                 <li class="snipcart-summary">
-                    <a href="" class="button snipcart-checkout">
+                    <a href="" class="snipcart-checkout">
                         <i class="icon icon-apps"></i>
                         View cart (<span class="snipcart-total-items">0</span>)
                     </a>
