--- a/pages/static/css/app.scss
+++ b/pages/static/css/app.scss
@@ -119,16 +119,16 @@ hr {border-color: $light-gray;}
   a {color: $white; margin-right: 8px; font-size: 17px;}
 }
 
-.title-bar {
+.title-bar { // for "small" screens
 	background: $primary;
-	a, a:hover {color: $white;}
+	a, a:hover {color: $yellow-dark;}
 }
 .top-bar {
     @include breakpoint(medium) {
         background: $primary;
         a {color: $white;}
         a:hover {color: $white;}
-        li {font-size: 13px;}
+        li {font-size: 16px;}
         li a:hover{background-color:$secondary;}
         li.menu-text{ // this is the logo & site name
           font-size: 18px;
@@ -137,7 +137,8 @@ hr {border-color: $light-gray;}
           a {
             display: flex;
             align-items: center;
-            line-height: 1.5;
+            line-height: 1.2;
+            font-size: 28px;
             color: $yellow-dark;
             img {
               margin-right: 10px;
@@ -154,7 +155,7 @@ hr {border-color: $light-gray;}
         .dropdown.menu .submenu {border-top: 3px solid $secondary;}
         .top-bar-right {
           ul, .dropdown.menu a {
-            color: $yellow-dark;
+            color: $white;
             &:hover {
               color: $yellow-light;
             }
