--- a/pages/templates/pages/award_page.html
+++ b/pages/templates/pages/award_page.html
@@ -6,15 +6,22 @@
 {% block body_class %}template-blogpage{% endblock %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
-    <div class="intro">{{ page.intro }}</div>
+<div id="content" class="grid-container">
+    <div class="grid-x grid-padding-x">
+        <div id="standard_page" class="medium-12 cell">
+          <h1>{{ page.title }}</h1>
+          <h3>{{ page.winner }}</h3>
+          <div class="intro">{{ page.intro }}</div>
 
-    <div style="float: left; margin: 10px">
-        {% image page.image max-1000x500 %}
-    </div>
 
-    <div>{{ page.body|richtext }}</div>
+          <div style="margin: 10px">
+              {% image page.image max-1000x500 %}
+          </div>
 
-    <p><a href="{{ page.get_parent.url }}">Return to award index</a></p>
+          <div>{{ page.body|richtext }}</div>
 
+          <p><a href="{{ page.get_parent.url }}">Return to award index</a></p>
+        </div>
+  </div>
+</div>
 {% endblock %}
